# fastapi-sqlmodel-todo

./: pyproject.toml
sqlmodel_curd/: main.py
